#1652 Run OpenRewrite to migrate langchain4j-core to java 17 (#1970)
## Issue
Contributes to #1652

## Change

Run OpenRewrite
[recipe](https://docs.openrewrite.org/running-recipes/popular-recipe-guides/migrate-to-java-17)
to migrate core module to Java 17.

This pull request focuses on modernizing the codebase by incorporating
Java's pattern matching for `instanceof` and replacing deprecated
methods with newer alternatives.

## General checklist
- [x] There are no breaking changes
- [ ] I have added unit and integration tests for my change
- [x] I have manually run all the unit tests, and they are all green
- [ ] I have manually run all the unit and integration tests in the
module I have added/changed, and they are all green
- [ ] I have manually run all the unit and integration tests in the
[core](https://github.com/langchain4j/langchain4j/tree/main/langchain4j-core)
and
[main](https://github.com/langchain4j/langchain4j/tree/main/langchain4j)
modules, and they are all green
<!-- Before adding documentation and example(s) (below), please wait
until the PR is reviewed and approved. -->
- [ ] I have added/updated the
[documentation](https://github.com/langchain4j/langchain4j/tree/main/docs/docs)
- [ ] I have added an example in the [examples
repo](https://github.com/langchain4j/langchain4j-examples) (only for
"big" features)
- [ ] I have added/updated [Spring Boot
starter(s)](https://github.com/langchain4j/langchain4j-spring) (if
applicable)