@@ -46,10 +46,11 @@ import static java.util.stream.Collectors.joining;
 public class DefaultContentInjector implements ContentInjector {
 
     public static final PromptTemplate DEFAULT_PROMPT_TEMPLATE = PromptTemplate.from(
-            "{{userMessage}}\n" +
-                    "\n" +
-                    "Answer using the following information:\n" +
-                    "{{contents}}"
+            """
+            {{userMessage}}
+            
+            Answer using the following information:
+            {{contents}}"""
     );
 
     private final PromptTemplate promptTemplate;
@@ -81,8 +82,8 @@ public class DefaultContentInjector implements ContentInjector {
         }
 
         Prompt prompt = createPrompt(chatMessage, contents);
-        if (chatMessage instanceof UserMessage && isNotNullOrBlank(((UserMessage)chatMessage).name())) {
-            return prompt.toUserMessage(((UserMessage)chatMessage).name());
+        if (chatMessage instanceof UserMessage message && isNotNullOrBlank(message.name())) {
+            return prompt.toUserMessage(message.name());
         }
 
         return prompt.toUserMessage();
@@ -158,6 +159,6 @@ public class DefaultContentInjector implements ContentInjector {
     protected String format(String segmentContent, String segmentMetadata) {
         return segmentMetadata.isEmpty()
                 ? segmentContent
-                : String.format("content: %s\n%s", segmentContent, segmentMetadata);
+                : "content: %s\n%s".formatted(segmentContent, segmentMetadata);
     }
 }
